--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -190,6 +190,20 @@
             android:textColor="#ffffff"
             android:typeface="monospace"
             android:textSize="20sp"/>
+        
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_gravity="center_horizontal"
+            android:text="Already have account？Log in now"
+            android:textColor="#ffffff"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            android:typeface="sans"
+            android:layout_weight="4">
+        </TextView>
     </LinearLayout>
 
 
