--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -143,6 +143,20 @@
             android:typeface="sans"
             android:layout_weight="4">
         </TextView>
+        
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
+            android:text="Replay in Local"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            android:typeface="sans"
+            android:layout_weight="4">
+        </TextView>
     </LinearLayout>
 
 
